tests/ui/type-alias-impl-trait/closures_in_branches.stderr
error[E0282]: type annotations needed
  --> $DIR/closures_in_branches.rs:8:10
   |
LL |         |x| x.len()
   |          ^    --- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |         |x: /* Type */| x.len()
   |           ++++++++++++

error[E0282]: type annotations needed
  --> $DIR/closures_in_branches.rs:22:10
   |
LL |         |x| x.len()
   |          ^    --- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |         |x: /* Type */| x.len()
   |           ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
